[package]
name = "employees"
version = "0.0.6"
edition = "2021"
authors = ["Maxime BAILLY <maxbailly@hotmail.fr>"]
categories = ["concurrency"]
keywords = ["employees", "multi-threading"]
license = "MIT"
documentation = "https://docs.rs/employees"
repository = "https://github.com/Caelmyn/employees"
readme = "README.md"
description = "A small runtime that hides all the boilerplate when using threads."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affinity = "0.1.2"
signal-hook = "0.3.17"
minuteurs = { version = "1.0.1", optional = true }

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time"] }
axum = "0.6.20"
crossbeam-channel = "0.5.8"
anyhow = "1.0.75"

employees = { path = ".", features = ["timing"] }

[features]
default = []
timing = ["dep:minuteurs"]

[[example]]
name = "mini-project"
path = "examples/mini-project/main.rs"
required-features = ["timing"]

[[example]]
name = "nested-runtimes"
path = "examples/nested-runtimes/main.rs"
required-features = ["timing"]

[[example]]
name = "respawn"
path = "examples/respawn/main.rs"

[[example]]
name = "scoped-respawn"
path = "examples/scoped-respawn/main.rs"
